@@ -6,6 +6,8 @@ v0.1.1.0
 
 Not released yet.
 
+- Fix: If-Modified-Since was not respected in GetAsync.
+
 v0.1.0.1
 ========
 
